<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="timer">Timer</string>
    <string name="timer_expired">Your alarm is ringing!</string>
    <string name="timer_ended">Timer ended</string>
    <string name="edit_image">Edit image</string>
    <string name="remove_image">Remove image</string>
    <string name="channel_name">Alarms &amp; Timers</string>
    <string name="channel_description">Notifications for alarms and timers</string>
    <string name="cooking_stage_photo">Cooking stage photo</string>
    <string name="toggle_unordered_list">Toggle unordered list</string>
    <string name="toggle_ordered_list">Toggle ordered list</string>
    <string name="add_image">Add image</string>
    <string name="add_timer">Add timer</string>
    <string name="set_duration">Set timer duration</string>
    <string name="hours_short">h</string>
    <string name="minutes_short">min</string>
    <string name="seconds_short">sec</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="pause">Pause timer</string>
    <string name="start">Start timer</string>
    <string name="reset">Reset timer</string>
    <string name="timer_description">%s timer</string>
    <string name="edit_timer">Edit timer duration</string>
    <string name="remove_timer">Remove timer</string>
</resources>